refactor: replace Stream.collect with Stream.toList in service classes (#21)